second_task/manifests/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: my-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:
  - match:
    - uri:
        exact: /
      method:
        exact: GET
    route:
    - destination:
        host: my-service
        port:
          number: 5000

  - match:
    - uri:
        exact: /status
      method:
        exact: GET
    route:
    - destination:
        host: my-service
        port:
          number: 5000

  - match:
    - uri:
        exact: /log
      method:
        exact: POST
    route:
    - destination:
        host: my-service
        port:
          number: 5000
    fault:
        delay:
          percentage:
            value: 100
          fixedDelay: 2s
    timeout: 1s
    retries:
        attempts: 2
        perTryTimeout: 1s

  - match:
    - uri:
        exact: /logs
      method:
        exact: GET
    route:
    - destination:
        host: my-service
        port:
          number: 5000
